# ProyectoFinalAlgoritmos

./: CMakeLists.txt  FuncionesProFinal.cpp  FuncionesProFinal.h  NOTAS  main.cpp
Data/: alumnos.txt  ciclos.txt  grupos.txt  profesores.txt
Include/Controladores/: GestionEscolar.h
Include/Estructuras/: EstructAlumno.h  EstructCiclos.h  EstructGrupos.h  EstructProfe.h
Include/Modelos/: Alumno.h  Ciclo.h  Grupo.h  Profesor.h
Include/Utilidades/: Comunes.h  Validaciones.h
src/Controladores/: GestionEscolar.cpp
src/Estructuras/: EstructAlumno.cpp  EstructCiclos.cpp  EstructGrupos.cpp  EstructProfe.cpp
src/Modelos/: Alumno.cpp  Ciclo.cpp  Grupo.cpp  Profesor.cpp
src/Utilidades/: Validaciones.cpp
